# ccsds-ndm

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  reader.py  reader_example.py  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml
.github/workflows/: workflow.yml
ccsds-ndm/examples/: xmltodict_example.py
ccsds_ndm/: __init__.py  ndm_io.py  ndm_kvn_io.py  ndm_xml_io.py
ccsds_ndm/models/: __init__.py
ccsds_ndm/ndmxml1/: __init__.py  ndmxml_1_0_aem_1_0.py  ndmxml_1_0_apm_1_0.py  ndmxml_1_0_cdm_1_0.py  ndmxml_1_0_master.py  ndmxml_1_0_ndm_1_0.py  ndmxml_1_0_oem_2_0.py  ndmxml_1_0_omm_2_0.py  ndmxml_1_0_opm_1_0.py  ndmxml_1_0_rdm_1_0.py  ndmxml_1_0_tdm_2_0.py
ccsds_ndm/tests/: test_ndm_io.py  test_ndm_kvn_io.py  test_ndm_xml_io.py
docs/: changelog.rst  conf.py  index.rst  more_info.rst  ndmclasses.rst  ndmio.rst  regenerate_code.rst
docs/examples/: XSD_to_py.md
docs/ndmclasses/: aem.rst
docs/ndmclasses1/: aem.rst  apm.rst  cdm.rst  master.rst  navwg_common.rst  ndm.rst  oem.rst  omm.rst  opm.rst  rdm.rst  tdm.rst
docs/ndmclasses2/: aem.rst  apm.rst  cdm.rst  master.rst  navwg_common.rst  ndm.rst  oem.rst  omm.rst  opm.rst  rdm.rst  tdm.rst
examples/: XSD_to_py.md
src/: __init__.py  ccsds_ndm.py  ndm_io.py
src/examples/: __init__.py  xmlschema_example.py  xmltodict_example.py  xsdata_example.py
src/ndmxml1/: __init__.py  ndmxml_1_0_aem_1_0.py  ndmxml_1_0_apm_1_0.py  ndmxml_1_0_cdm_1_0.py  ndmxml_1_0_master.py  ndmxml_1_0_navwg_common.py  ndmxml_1_0_ndm_1_0.py  ndmxml_1_0_oem_2_0.py  ndmxml_1_0_omm_2_0.py  (+3 more)
(+134 files in other folders)
